<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="14dp"
    app:cardUseCompatPadding="true"
    tools:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_healine_list"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_headline"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title_headline"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/title_example"
            android:textSize="18sp"
            android:ellipsize="end"
            android:maxLines="2"
            android:scrollHorizontally="true"
            app:layout_constraintEnd_toStartOf="@id/bookmark"
            app:layout_constraintStart_toEndOf="@+id/img_healine_list"
            app:layout_constraintTop_toTopOf="@+id/img_healine_list" />

        <ImageView
            android:id="@+id/bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/title_bookmark"
            app:layout_constraintBottom_toBottomOf="@+id/title_headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_headline"
            app:layout_constraintTop_toTopOf="@+id/title_headline"
            app:srcCompat="@drawable/ic_add_bookmark" />

        <ImageView
            android:id="@+id/img_user_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/title_headline"
            app:srcCompat="@drawable/ic_account_circle"
            android:contentDescription="@string/user_penulis"/>

        <TextView
            android:id="@+id/nama_penulis_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama_penulis"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@id/img_date"
            app:layout_constraintBottom_toBottomOf="@+id/img_user_account"
            app:layout_constraintStart_toEndOf="@+id/img_user_account"
            app:layout_constraintTop_toTopOf="@+id/img_user_account" />

        <ImageView
            android:id="@+id/img_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/date"
            app:layout_constraintBottom_toBottomOf="@+id/nama_penulis_id"
            app:layout_constraintEnd_toStartOf="@+id/tanggal_txt"
            app:layout_constraintStart_toEndOf="@id/nama_penulis_id"
            app:layout_constraintTop_toTopOf="@+id/nama_penulis_id"
            app:srcCompat="@drawable/ic_date_range" />

        <TextView
            android:id="@+id/tanggal_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_10_jan_2021"
            android:textSize="12sp"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="@+id/img_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_date"
            app:layout_constraintTop_toTopOf="@+id/img_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>