<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="14dp"
    xmlns:tools="http://schemas.android.com/tools">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/img_profile"
        android:src="@drawable/mandiri_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/mandiri_news_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mandiri_news"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textColor="@color/main_color_mandiri"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile"
        app:layout_constraintStart_toEndOf="@+id/img_profile"
        app:layout_constraintTop_toTopOf="@+id/img_profile" />

    <TextView
        android:id="@+id/berita_terkini_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:textColor="@color/main_color_mandiri"
        android:layout_marginTop="32dp"
        android:text="@string/berita_terkini"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="24dp"
        app:cardMaxElevation="14dp"
        app:layout_constraintEnd_toEndOf="@+id/berita_terkini_txt"
        app:layout_constraintStart_toStartOf="@+id/berita_terkini_txt"
        app:layout_constraintTop_toBottomOf="@+id/berita_terkini_txt">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="24dp"
                app:cardMaxElevation="14dp"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_headline"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/image_headline"
                    android:scaleType="centerCrop"
                    tools:src="@tools:sample/avatars" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title_headline_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/main_color_mandiri"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="Lorem ipsum hanabaara jdgdja kuliah hfhfbah jdualld atdy nisa kdhf ksjejf baidivm baraa"
                app:layout_constraintStart_toStartOf="@+id/materialCardView"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

            <TextView
                android:id="@+id/media_publish_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnn_indonesia"
                android:layout_marginStart="12dp"
                android:paddingBottom="4dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/title_headline_txt"
                app:layout_constraintTop_toBottomOf="@+id/title_headline_txt" />

            <TextView
                android:id="@+id/tanggal_publish_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:paddingBottom="4dp"
                android:text="@string/_10_jan_2021"
                app:layout_constraintEnd_toEndOf="@+id/materialCardView"
                app:layout_constraintTop_toTopOf="@+id/media_publish_txt"
                app:layout_constraintBottom_toBottomOf="@id/media_publish_txt"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>